<resources>
    <string name="app_name">NetworkChecker</string>
    <string name="check">Check</string>
    <string name="checking">Checking</string>
    <string name="recheck">ReCheck</string>
    <string name="start_check">start checking ...</string>
    <string name="device">Device</string>
    <string name="router">Router</string>
    <string name="innernet">Innernet</string>
    <string name="gfw_wall">GFW WALL</string>
    <string name="internet">Internet</string>
    <string name="status">Status</string>
    <string name="details">Details</string>
    <string name="alert_msg">please connect to network !</string>
</resources>
